Tela de itens, novo layout da navbar com buscador, logo e login, tela 'sobre'

--- a/projetoPpi/style.css
+++ b/projetoPpi/style.css
@@ -18,7 +18,7 @@ body {
 }
 header {
     background-color: #eee;
-    color: #555555;
+    color: #30a377;
     border: grey;
     text-align: center;
     margin: 5px 0 0 0;
@@ -88,12 +88,4 @@ h2 {
 }
 p{
     float: right
-}
-.item{
-    display: flex; 
-    width: 100%; 
-    justify-content: space-between; 
-    align-items: center;
-    padding-bottom: 2rem;
-    background-color: #f8f8f8;
 }
