--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ nav ul li {
     display: inline-block;
     margin: 0 15px;
     padding: 0;
+    border: 1px black;
 }
 
 nav a {
@@ -135,6 +136,5 @@ p{
 .main-profile{
     display: flex;
     justify-content: center;
-    align-items: center
-
+    align-items: center;
 }
